<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/img_title_1"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/betmatch"
        app:layout_constraintBottom_toTopOf="@+id/btn_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_table"
        style="@style/CustomMaterialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_news"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/btn_table"
        app:layout_constraintVertical_bias="0.7"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_news"
        style="@style/CustomMaterialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_table"
        app:layout_constraintBottom_toTopOf="@+id/btn_stats"
        android:text="@string/btn_news"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stats"
        style="@style/CustomMaterialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_news"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        android:text="@string/btn_stats"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/CustomMaterialButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stats"
        android:text="@string/btn_settings"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
